Remove thesis specific intro
Remove intro and preliminary sections. Turn on TODO macro and place some new TODO's.

--- a/formalism.tex
+++ b/formalism.tex
@@ -1,526 +1,10 @@
 \section{Propositional Classical Logic}\label{section:PropositionalClassicalLogic}
 
-The traditional formalism in deep inference is \emph{the calculus of structures} \cite{Gugl:06:A-System:kl}.
-
-\TODO{Few words of caution about Formalism A note.}
-
-The idea of a new formalism, named \emph{formalism A} based on the calculus of structures, but where derivations contain less bureaucracy, was proposed by Guglielmi in \cite{Gugl:04:Formalis:am}, and later Br\"{u}nnler and Lengrand developed a term calculus around these ideas \cite{BrunLeng:05:On-Two-F:jf}.
-
-In this chapter I define a formalism based on the ideas of formalism A and call it (as suggested by Fran\c{c}ois Lamarche) \emph{the functorial calculus}. The reason to introduce a new formalism is that its lack of bureaucracy greatly simplifies the presentation of some of the more technical results in this thesis (in particular Section~\ref{subsubsection:ThresholdFormulae}).
-
-After presenting the functorial calculus we compare it briefly with the calculus of structures before we introduce the standard deductive system for classical logic in deep inference and show some preliminary results.
-
-We now define `formulae' and `inference rules', which are in common between both the functorial calculus and the calculus of structures. Definitions~\vrefrange{definition:Formula}{definition:InferenceRuleInstance} are based on definitions given in \cite{BrusGugl:07:On-the-P:fk}. The focus of this thesis is classical propositional logic, and the following definitions reflect this. However, it is worth noting that the definitions can be generalised to other units and connectives, if one wants to present other logics.
+\TODO{Define the formalism as in paper on threshold formulae}
 
 %---------------------------
 \newcommand{\fff}{\mathsf f}
 \newcommand{\ttt}{\mathsf t}
 \newcommand{\size}[1]{{\left\vert #1\right\vert}}\vlupdate\size
-\begin{definition}\label{definition:Formula}
-We define a set of \emph{formulae}\index{formulae}, denoted by $\alpha$, $\beta$, $\gamma$, $\delta$ to be:
-\begin{itemize}
- \item \emph{atoms}, denoted by $a$, $b$, $c$, $d$ and $\bar a$, $\bar b$, $\bar c$, $\bar d$;
- \item \emph{formula variables}, denoted by $A$, $B$, $C$, $D$;
- \item \emph{units} $\fff$ (false) and $\ttt$ (true); and
- \item the \emph{disjunction} and \emph{conjunction} of formulae $\alpha$ and $\beta$, denoted by $\vlsbr[\alpha.\beta]$ and  $\vlsbr(\alpha.\beta)$, respectively.
-\end{itemize}
-A formula is \emph{ground}\index{formula!ground} if it contains no variables. We usually omit external brackets of formulae, and sometimes we omit dispensable brackets under associativity. We use $\equiv$ to denote literal equality of formulae. The \emph{size}\index{formula!size} $\size\alpha$ of a formula $\alpha$ is the number of unit, atom and variable occurrences appearing in it. On the set of atoms there is an involution $\bar\cdot$, called \emph{negation}\index{atoms!negation} (\emph{i.e.}, $\bar\cdot$ is a bijection from the set of atoms to itself such that $\bar{\bar a}\equiv a$); we require that $\bar a\not\equiv a$ for every $a$; when both $a$ and $\bar a$ appear in a formula, we mean that atom $a$ is mapped to by $\bar a$ by $\bar\cdot$. A \emph{context}\index{formula!context} is a formula where one \emph{hole}\index{hole} $\vlhole$ appears in the place of a subformula; for example, $\vls[a.(b.\vlhole)]$ is a context; the generic context is denoted by $\xi\vlhole$. The hole can be filled with formulae; for example, if $\xi\vlhole\equiv\vls(b.[\vlhole.c])$, then $\xi\{a\}\equiv\vls(b.[a.c])$, $\xi\{b\}\equiv\vls(b.[b.c])$ and $\xi\{\vls(a.b)\}\equiv\vls(b.[(a.b).c])$. The \emph{size}\index{formula!context!size} of $\xi\vlhole$ is defined as $\size{\xi\vlhole}=\size{\xi\{a\}}-1$.
-\end{definition}
-%---------------
 
-%--------------------------------------------------------
-\begin{definition}\label{definition:RenamingSubstitution}
-A \emph{renaming}\index{atoms!renaming} is a map from the set of atoms to itself, and it is denoted by $\{a_1/b_1,a_2/b_2,\dots\}$. A renaming of $\alpha$ by $\{a_1/b_1,a_2/b_2,\dots\}$ is indicated by $\alpha\{a_1/b_1,a_2/b_2,\dots\}$ and is obtained by simultaneously substituting every occurrence of $a_i$ in $\alpha$ by $b_i$ and every occurrence of $\bar a_i$ by $\bar b_i$; for example, if $\alpha\equiv\vls(a.[b.(a.[\bar a.c])])$ then $\alpha\{a/\bar b,\bar b/c\}\equiv\vls(\bar b.[\bar c.(\bar b.[b.c])])$. A \emph{substitution}\index{substitution} is a map from the set of formula variables to the set of formulae, denoted by $\{A_1/\beta_1,A_2/\beta_2,\dots\}$. An \emph{instance}\index{formula!instance} of $\alpha$ by $\{A_1/\beta_1,A_2/\beta_2,\dots\}$ is indicated by $\alpha\{A_1/\beta_1,A_2/\beta_2,\dots\}$ and is obtained by simultaneously substituting every occurrence of variable $A_i$ in $\alpha$ by formula $\beta_i$; for example if $\alpha\equiv\vls[A.(b.c)]$ then $\alpha\{A/\vlsbr(c.\bar b)\}\equiv\vls[(c.\bar b).(b.c)]$.
-\end{definition}
-%---------------
-
-\begin{convention}
-By the above definition, formula variables will only be used to define inference rules, and will never appear in derivations. However, when we perform normalisation we will sometimes single out atom occurrences (by decorating them) and substitute on them as if they were formula variables.
-\end{convention}
-
-%---------------------------------------------------------
-\begin{definition}\label{definition:InferenceRuleInstance}
-An \emph{inference rule}\index{inference rule} $\rho$ is an expression $\vlinf{\rho}{}{\beta}{\alpha}$, where the formulae $\alpha$ and $\beta$ are called \emph{premiss}\index{inference rule!premiss} and \emph{conclusion}\index{inference rule!conclusion}, respectively. A (\emph{deductive}) \emph{system}\index{system} is a finite set of inference rules. An \emph{inference rule instance}\index{inference rule!instance} $\vlinf{\rho}{}{\delta}{\gamma}$ of $\vlinf{\rho}{}{\beta}{\alpha}$ is such that $\gamma$ and $\delta$ are ground, and $\gamma\equiv\alpha\{a_1/b_1,a_2/b_2,\dots\}\{A_1/\beta_1,A_2/\beta_2,\dots\}$ and $\delta\equiv\beta\{a_1/b_1,a_2/b_2,\dots\}\{A_1/\beta_1,A_2/\beta_2,\dots\}$, for some renaming $\{a_1/b_1,a_2/b_2,\dots\}$ and substiution $\{A_1/\beta_1,A_2/\beta_2,\dots\}$.
-\end{definition}
-%---------------
-
-%==================================================================
-\subsection{The Functorial Calculus}\label{subsection:FunctorialCalculus}
-
-We now present the functorial calculus in the context of classical propositional logic and give some basic results.
-
-The intuition behind derivations in the functorial calculus is that we can compose derivations by the same connectives we can compose formulae.
-
-%----------------------------------------------
-\begin{definition}\label{definition:Derivation}
-Given a deductive system $\mathcal S$, and formulae $\alpha$ and $\beta$; a (\emph{functorial calculus}) \emph{derivation $\Psi$ in $\mathcal S$ from $\alpha$ to $\beta$}\index{derivation!functorial calculus}, denoted $\vlder{\Psi}{\mathcal{S}}{\beta}{\alpha}$, is defined to be
-\begin{enumerate}
- \item\label{definition:Derivation:item:Formula} a formula: $\Psi\;=\;\alpha\equiv\beta$;
-
- \item\label{definition:Derivation:item:Vertical} a \emph{vertical composition}\index{derivation!functorial calculus!vertical composition}:
- \[
- \Psi\;=\;
- \vlderivation
- {
-  \vlde{\Phi_2}{}
-  {
-   \beta
-  }
-  {
-   \vlin{\rho}{}
-   {
-    \alpha'
-   }
-   {
-    \vlde{\Phi_1}{}
-    {
-     \beta'
-    }
-    {
-     \vlhy
-     {
-      \alpha
-     }
-    }
-   }
-  }
- }
- \quad,
- \]
- where $\vlinf{\rho}{}{\alpha'}{\beta'}$ is an instance of an inference rule from $\mathcal{S}$, and $\vlder{\Phi_1}{\mathcal S}{\beta'}{\alpha}$ and $\vlder{\Phi_2}{\mathcal S}{\beta}{\alpha'}$ are derivations; or
-
- \item\label{definition:Derivation:item:Horizontal} a \emph{horizontal composition}\index{derivation!functorial calculus!horizontal composition}:
- \[
- \Psi\;=\;
- \vls
- (
-  \vlder{\Phi_1}{}{\beta_1}{\alpha_1}
- \;\;.\;\;
-  \vlder{\Phi_2}{}{\beta_2}{\alpha_2}
- )
- \qquad\mbox{or}\qquad
- \Psi\;=\;
- \vls
- [
-  \vlder{\Phi_1}{}{\beta_1}{\alpha_1}
- \;\;.\;\;
-  \vlder{\Phi_2}{}{\beta_2}{\alpha_2}
- ] 
- \quad,
- \]
- where $\vlder{\Phi_1}{}{\beta_1}{\alpha_1}$ and $\vlder{\Phi_2}{}{\beta_2}{\alpha_2}$ are derivations, and  $\alpha\equiv\vls[\alpha_1.\alpha_2]$ and $\beta\equiv\vls[\beta_1.\beta_2]$, or $\alpha\equiv\vls(\alpha_1.\alpha_2)$ and $\beta\equiv\vls(\beta_1.\beta_2)$, respectively.
-\end{enumerate}
-
-A derivation with premiss $\ttt$ is, from now on, called a \emph{proof}.
-
-The size of a derivation $\Psi$, denoted $\size{\Psi}$, is defined to be the sum of the size of the formulae appearing in $\Psi$.
-\end{definition}
-%---------------
-
-%-------------------------------------------------------------
-\begin{convention}\label{convention:DerAssociativeComposition}
-Given derivations $\vlder{\Phi_1}{}{\beta_1}{\alpha_1}$, $\vlder{\Phi_2}{}{\beta_2}{\alpha_2}$ and $\vlder{\Phi_3}{}{\beta_3}{\alpha_3}$, and inference rule instances $\vlinf{\rho_1}{}{\alpha_2}{\beta_1}$ and $\vlinf{\rho_2}{}{\alpha_3}{\beta_2}$ we consider
-\[
-\vlinf{\rho_2}{}
-{
- \vlder{\Phi_3}{}
- {
-  \beta_3
- }
- {
-  \alpha_3
- }
-}
-{
- \left(
- \vlinf{\rho_1}{}
- {
-  \vlder{\Phi_2}{}
-  {
-   \beta_2
-  }
-  {
-   \alpha_2
-  }
- }
- {
-  \vlder{\Phi_1}{}
-  {
-   \beta_1
-  }
-  {
-   \alpha_1
-  }
- }
- \right)
-}
-\qquad\mbox{and}\qquad
-\vlinf{\rho_1}{}
-{
- \left(
- \vlinf{\rho_2}{}
- {
-  \vlder{\Phi_3}{}
-  {
-   \beta_3
-  }
-  {
-   \alpha_3
-  }
- }
- {
-  \vlder{\Phi_2}{}
-  {
-   \beta_2
-  }
-  {
-   \alpha_2
-  }
- }
- \right)
-}
-{
- \vlder{\Phi_1}{}
- {
-  \beta_1
- }
- {
-  \alpha_1
- }
-}
-\]
-to be equal, and we denote them both by
-\[
-\vlderivation
-{
- \vlde{\Phi_3}{}
- {
-  \beta_3
- }
- {
-  \vlin{\rho_2}{}
-  {
-   \alpha_3
-  }
-  {
-   \vlde{\Phi_2}{}
-   {
-    \beta_2
-   }
-   {
-    \vlin{\rho_1}{}
-    {
-     \alpha_2
-    }
-    {
-     \vlde{\Phi_1}{}
-     {
-      \beta_1
-     }
-     {
-      \vlhy
-      {
-       \alpha_1
-      }
-     }
-    }
-   }
-  }
- }
-}
-\quad.
-\]
-\end{convention}
-%---------------
-
-%--------------------------------------
-\begin{lemma}\label{lemma:DerInContext}
-Given a derivation $\vlder{\Phi}{}{\beta}{\alpha}$ and a context $\xi\vlhole$, a derivation $\vlder{\Psi}{}{\xi\{\beta\}}{\xi\{\alpha\}}$, with size $\size{\Phi}+\size{\xi\vlhole}$, can be constructed.
-\end{lemma}
-
-\begin{proof}
-We proceed by structural induction on $\xi\vlhole$. The base case, $\xi\vlhole\equiv\vlhole$, is trivial.
-For the inductive case, let
-\[
- \xi\vlhole\equiv\vls(\xi'\vlhole.\gamma)\quad,\qquad\xi\vlhole\equiv\vls(\gamma.\xi'\vlhole)\quad,
-\]
-\[
- \xi\vlhole\equiv\vls[\xi'\vlhole.\gamma]\qquad\mbox{or}\qquad\xi\vlhole\equiv\vls[\gamma.\xi'\vlhole]\quad.
-\]
-for some formula $\gamma$ and a context $\xi'\vlhole$. By the inductive hypothesis we can construct the derivation $\vlder{\Psi'}{}{\xi'\{\beta\}}{\xi'\{\alpha\}}$, so the result follows by case (\ref{definition:Derivation:item:Horizontal}) of Definition~\vref{definition:Derivation}.
-\end{proof}
-%----------
-
-%--------------------------------------------
-\begin{notation}\label{notation:DerInContext}
-Given a derivation $\vlder{\Phi}{}{\beta}{\alpha}$ and a context $\xi\vlhole$, the derivation $\vlder{}{}{\xi\{\beta\}}{\xi\{\alpha\}}$ constructed in the proof of Lemma~\vref{lemma:DerInContext} is denoted $\xi\{\Phi\}$.
-\end{notation}
-%-------------
-
-%----------------------------------------
-\begin{lemma}\label{lemma:DerComposition}
-Given two derivations $\vlder{\Phi_1}{}{\beta}{\alpha}$ and $\vlder{\Phi_2}{}{\gamma}{\beta}$, a derivation $\vlder{\Psi}{}{\gamma}{\alpha}$, with size $\size{\Phi_1}+\size{\Phi_2}-\size{\beta}$, can be constructed.
-\end{lemma}
-
-\begin{proof}
-We argue by structural induction on $\Phi_1$
-\begin{enumerate}
-
- \item\label{proof:DerComposition:item:Formula} if $\Phi_1=\beta$ then $\Psi=\Phi_2$, with size $\size{\Phi_1}+\size{\Phi_2}-\size{\beta}$;
-
- \item\label{proof:DerComposition:item:Vertical} if
-  \[
-   \Phi_1\;=\;
-   \vlderivation
-   {
-    \vlde{\Phi''_1}{}
-    {
-     \beta
-    }
-    {
-     \vlin{\rho}{}
-     {
-      \alpha'
-     }
-     {
-      \vlde{\Phi'_1}{}
-      {
-       \beta'
-      }
-      {
-       \vlhy
-       {
-        \alpha
-       }
-      }
-     }
-    }
-   }\quad,
-  \]
-  then, by the inductive hypothesis, we can construct $\vlder{\Psi'}{}{\gamma}{\alpha'}$, with size $\size{\Phi''_1}+\size{\Phi_2}-\size{\beta}$, we can then build
-  \[
-   \Psi\;=\;
-   \vlderivation
-   {
-    \vlde{\Psi'}{}
-    {
-     \gamma
-    }
-    {
-     \vlin{\rho}{}
-     {
-      \alpha'
-     }
-     {
-      \vlde{\Phi'_1}{}
-      {
-       \beta'
-      }
-      {
-       \vlhy
-       {
-        \alpha
-       }
-      }
-     }
-    }
-   }\quad,
-  \]
-  with size $\size{\Phi'_1}+\size{\Psi'}=\size{\Phi'_1}+\size{\Phi''_1}+\size{\Phi_2}-\size{\beta}=\size{\Phi_1}+\size{\Phi_2}-\size{\beta}$;
-
- \item if 
- \[
-  \Phi_1\;=\;
-  \vls[\vlder{\Phi_{1,1}}{}{\beta_1}{\alpha_1}\;\;.\;\;\vlder{\Phi_{1,2}}{}{\beta_2}{\alpha_2}]
-  \qquad\mbox{or}\qquad
-  \Phi_1\;=\;
-  \vls(\vlder{\Phi_{1,1}}{}{\beta_1}{\alpha_1}\;\;.\;\;\vlder{\Phi_{1,2}}{}{\beta_2}{\alpha_2})
- \]
- we argue by structural induction on $\Phi_2$:
- \begin{enumerate}
-  \item if $\Phi_2$ is a formula (resp., a vertical composition), the result follow by a symmetric argument to case \ref{proof:DerComposition:item:Formula} (resp., \ref{proof:DerComposition:item:Vertical}) above.
-  \item if
-  \[
-    \Phi_2\;=\;
-    \vls[\vlder{\Phi_{2,1}}{}{\gamma_1}{\beta_1}\;\;.\;\;\vlder{\Phi_{2,2}}{}{\gamma_2}{\beta_2}]
-    \qquad\mbox{or}\qquad
-    \Phi_2\;=\;
-    \vls(\vlder{\Phi_{2,1}}{}{\gamma_1}{\beta_1}\;\;.\;\;\vlder{\Phi_{2,2}}{}{\gamma_2}{\beta_2})
-  \]
-  then, by the first inductive hypothesis, we can construct
-  \[
-   \vlder{\Psi_1}{}{\gamma_1}{\alpha_1}
-   \qquad\mbox{and}\qquad
-   \vlder{\Psi_2}{}{\gamma_2}{\alpha_2}\quad,
-  \]
-  with size $\size{\Phi_{1,1}}+\size{\Phi_{2,1}}-\size{\beta_1}$ and $\size{\Phi_{1,2}}+\size{\Phi_{2,2}}-\size{\beta_2}$, respectively, we can then build
-  \[
-   \Psi\;=\;
-   \vls[\vlder{\Psi_1}{}{\gamma_1}{\alpha_1}\;\;.\;\;\vlder{\Psi_2}{}{\gamma_2}{\alpha_2}]
-   \qquad\mbox{or}\qquad
-   \Psi\;=\;
-   \vls(\vlder{\Psi_1}{}{\gamma_1}{\alpha_1}\;\;.\;\;\vlder{\Psi_2}{}{\gamma_2}{\alpha_2})
-  \]
-  with size $\size{\Psi_1}+\size{\Psi_2}=\size{\Phi_{1,1}}+\size{\Phi_{1,2}}+\size{\Phi_{2,1}}+\size{\Phi_{2,2}}-(\size{\beta_1}+\size{\beta_2})=\size{\Phi_1}+\size{\Phi_2}-\size{\beta}$.
- \end{enumerate}
-\end{enumerate}
-\end{proof}
-%----------
-
-%----------------------------------------------
-\begin{notation}\label{notation:DerComposition}
-Given derivations $\vlder{\Phi_1}{}{\beta}{\alpha}$ and $\vlder{\Phi_2}{}{\gamma}{\beta}$, the derivation $\vlder{\Psi}{}{\gamma}{\alpha}$ constructed in the proof of Lemma~\vref{lemma:DerComposition} is denoted:
-\[
-\vlderivation
-{
- \vlde{\Phi_2}{}{\gamma}
- {
-  \vlde{\Phi_1}{}{\beta}
-  {
-   \vlhy{\alpha}
-  }
- }
-}\quad.
-\]
-\end{notation}
-%-------------
-
-%=======================================================================
-\subsection{The Calculus of Structures}\label{subsection:CalculusOfStructures}
-
-We now present the calculus of structures and in Theorems~\ref{theorem:CoSToFunc} and \ref{theorem:FuncToCoS} we show that the functorial calculus and the calculus of structures polynomially simulate each other.
-
-The intuition behind derivations in the calculus of structures is that we rewrite formulae by applying inference rules inside a context.
-
-%---------------------------------------
-\begin{definition}\label{definition:CoS}
-Given a deductive system $\mathcal S$, a set of formulae, $\mathcal F$, and $\alpha$ and $\beta$ from $\mathcal F$; a \emph{calculus of structures derivation $\Psi$ in $\mathcal S$ from $\alpha$ to $\beta$}\index{derivation!calculus of structures}, denoted $\vlder{\Psi}{\mathcal{S}}{\beta}{\alpha}$, is defined to be
-\begin{enumerate}
- \item\label{definition:CoS:item:Formula} a formula: $\Psi\;=\;\alpha\equiv\beta$; or
-
- \item\label{definition:CoS:item:Vertical} a \emph{vertical composition}\index{derivation!calculus of structures!vertical composition}:
- \[
- \Psi\;=\;
- \vlderivation
- {
-  \vlde{\Phi_2}{}
-  {
-   \beta
-  }
-  {
-   \vlin{\rho}{}
-   {
-    \xi\{\alpha'\}
-   }
-   {
-    \vlde{\Phi_1}{}
-    {
-     \xi\{\beta'\}
-    }
-    {
-     \vlhy
-     {
-      \alpha
-     }
-    }
-   }
-  }
- }
- \quad,
- \]
- where $\vlinf{\rho}{}{\alpha'}{\beta'}$ is an instance of an inference rule from $\mathcal{S}$, and $\vlder{\Phi_1}{\mathcal S}{\xi\{\beta'\}}{\alpha}$ and $\vlder{\Phi_2}{\mathcal S}{\beta}{\xi\{\alpha'\}}$ are calculus of structures derivations.
-\end{enumerate}
-The size of a calculus of structures derivation $\Psi$, denoted $\size{\Psi}$, is defined to be the sum of the size of the formulae appearing in $\Psi$.
-\end{definition}
-%---------------
-
-%---------------------------------------
-\begin{theorem}\label{theorem:CoSToFunc}
-A calculus of structures derivation $\vlder{\Phi}{}{\beta}{\alpha}$ can be transformed into a functorial calculus derivation $\vlder{\Psi}{}{\beta}{\alpha}$ such that $\size{\Psi}\le\size{\Phi}$.
-\end{theorem}
-
-\begin{proof}
-We argue by structural induction on $\Phi$. The base case is trivial; $\Phi=\alpha\equiv\beta=\Psi$. For the inductive case, consider the following calculus of structures derivation:
-\[
-\Phi\;=\;
- \vlinf{\rho}{}
- {
-  \vlder{\Phi_2}{}
-  {
-   \beta
-  }
-  {
-   \xi\{\alpha'\}
-  }
- }
- {
-  \vlder{\Phi_1}{}
-  {
-   \xi\{\beta'\}
-  }
-  {
-   \alpha
-  }
- }
-\quad.
-\]
-By the inductive hypothesis, there are functorial calculus derivations $\vlder{\Psi_1}{}{\xi\{\beta'\}}{\alpha}$ and $\vlder{\Psi_2}{}{\beta}{\xi\{\alpha'\}}$, such that $\size{\Psi_1}\le\size{\Phi_1}$ and $\size{\Psi_2}\le\size{\Phi_2}$. By Lemma~\vref{lemma:DerInContext}, there is a functorial calculus derivation $\xi\left\{\vlinf{\rho}{}{\alpha'}{\beta'}\right\}$, with size $\size{\xi\vlhole}+\size{\alpha'}+\size{\beta'}$. By Lemma~\vref{lemma:DerComposition}, we can combine the three functorial calculus derivations to create $\vlder{\Psi}{}{\beta}{\alpha}$, with size $\size{\Psi_1}+\size{\Psi_2}+\size{\xi\vlhole}+\size{\beta'}+\size{\alpha'}-\size{\xi\vlhole}-\size{\beta'}-\size{\xi\vlhole}-\size{\alpha'}=\size{\Psi_1}+\size{\Psi_2}-\size{\xi\vlhole}\le\size{\Phi_1}+\size{\Phi_2}=\size{\Phi}$.
-\end{proof}
-%----------
-
-%--------------
-\begin{example}
-Figure~\vref{figure:ExampleAtomicFlows} has three examples of calculus of structures derivations transformed into functorial calculus derivations.
-\end{example}
-%------------
-
-%--------------------------------------
-\begin{lemma}\label{lemma:CoSDerInContext}
-Given a calculus of structures derivation $\vlder{\Phi}{}{\beta}{\alpha}$ and a context $\xi\vlhole$, a calculus of structures derivation $\vlder{\Psi}{}{\xi\{\beta\}}{\xi\{\alpha\}}$ can be constructed, such that the number of inference rule instances in $\Psi$ is the same as the number of inference rule instances in $\Phi$, and the size of the largest formula in $\Psi$ is the sum of the largest formula in $\Phi$ and $\size{\xi\vlhole}$.
-\end{lemma}
-
-\begin{proof}
-The statements follows by structural induction on $\Phi$.
-\end{proof}
-%----------
-
-%----------------------------------------
-\begin{lemma}\label{lemma:CoSDerComposition}
-Given two calculus of structures derivations $\vlder{\Phi_1}{}{\beta}{\alpha}$ and $\vlder{\Phi_2}{}{\gamma}{\beta}$, a calculus of structures derivation $\vlupsmash{\vlder{\Psi}{}{\gamma}{\alpha}}$ can be constructed, such that the number of inference rule instances in $\Psi$ is the sum of the number of inference rule instances in $\Phi_1$ and $\Phi_2$ combined, and the largest formula in $\Psi$ is the largest formula of $\Phi_1$ or the largest formula of $\Phi_2$.
-\end{lemma}
-
-\begin{proof}
-The statement follows by structural induction on $\Phi_1$.
-\end{proof}
-%----------
-
-%---------------------------------------
-\begin{theorem}\label{theorem:FuncToCoS}
-A functorial calculus derivation $\vlder{\Phi}{}{\beta}{\alpha}$ can be transformed into a calculus of structures derivation $\vlder{\Psi}{}{\beta}{\alpha}$ such that the size of $\Psi$ depends at most quadratically on the size of $\Phi$.
-\end{theorem}
-
-\begin{proof}
-We first show how to construct $\Psi$: The base cases, when $\Phi$ is a formula or a vertical composition, are trivial. For the inductive case, consider a conjunction of functorial calculus derivations (the argument for the disjunction is similar):
-\[
-\Phi\;=\;
-\vls
-(
- \vlder{\Phi_1}{}{\beta_1}{\alpha_1}
-\;\;.\;\;
- \vlder{\Phi_2}{}{\beta_2}{\alpha_2}
-)\quad.
-\]
-By the inductive hypothesis and Lemma~\ref{lemma:CoSDerInContext} there are calculus of structures derivations
-\[
-\vlder{\Psi_1}{}{\vls(\beta_1.\alpha_1)}{\vls(\alpha_1.\alpha_1)}
-\qquad\mbox{and}\qquad
-\vlder{\Psi_2}{}{\vls(\beta_1.\beta_2)}{\vls(\beta_1.\alpha_2)}
-\quad,
-\]
-and by Lemma~\ref{lemma:CoSDerComposition} there exists a calculus of structures derivation $\vlder{\Psi}{}{\vls(\beta_1.\beta_2)}{\vls(\alpha_1.\alpha_2)}$.
-
-To find an upper bound on the size of $\Psi$, we observe that it depends at most linearly on the number of inference rule instances in $\Psi$ multiplied by the size of the largest formula in $\Psi$. Furthermore, by the above Lemmata, the number of inference rules in $\Psi$ is the same as the number of inference rules in $\Phi$ and the size of the largest inference rule depends at most linearly on the size of $\Phi$, so the size of $\Psi$ depends at most quadratically on the size of $\Phi$.
-\end{proof}
-%----------
-
-The calculus of structures is now well developed for classical \cite{Brun:03:Atomic-C:oz,Brun:06:Cut-Elim:cq,Brun:06:Locality:zh,BrunTiu:01:A-Local-:mz,Brun:06:Deep-Inf:qy}, intuitionistic \cite{Tiu:06:A-Local-:gf}, linear \cite{Stra:02:A-Local-:ul,Stra:03:MELL-in-:oy}, modal \cite{Brun::Deep-Seq:ay,GoreTiu:06:Classica:uq,Stou:06:A-Deep-I:rt} and commutative/non-commutative logics \cite{Gugl:06:A-System:kl,Tiu:06:A-System:ai,Stra:03:Linear-L:lp,Brus:02:A-Purely:wd,Di-G:04:Structur:wy,GuglStra:01:Non-comm:rp,GuglStra:02:A-Non-co:lq,GuglStra:02:A-Non-co:dq,Kahr:06:Reducing:hc,Kahr:07:System-B:fk}. The basic proof complexity properties of the calculus of structures are known \cite{BrusGugl:07:On-the-P:fk}. The calculus of structures promoted the discovery of a new class of proof nets for classical and linear logic \cite{LamaStra:05:Construc:qq,LamaStra:05:Naming-P:ov,LamaStra:06:From-Pro:et,StraLama:04:On-Proof:ec} (see also \cite{Guir:06:The-Thre:qt}). There exist implementations in Maude of deep-inference proof systems \cite{Kahr:07:Maude-as:lr}.
+\TODO{Define $\fff$, $\ttt$ and $\size{x}$ (size).}
