--- a/sks.tex
+++ b/sks.tex
@@ -2,9 +2,7 @@
 
 \subsection{System SKS}
 
-We now define the standard deductive system for classical propositional logic in deep inference $\SKS$\index{$\SKS$} \cite{Brun:03:Atomic-C:oz,Brun:06:Cut-Elim:cq,Brun:06:Locality:zh,BrunTiu:01:A-Local-:mz}. For an excellent reference to previous work on normalisation in $\SKS$, see \cite{Brun:04:Deep-Inf:rq}. Subsystems of $\SKS$ are used throughout this thesis.
-
-The results presented in this section, with the exception of Theorem~\vref{theorem:SKSComplete}, are standard results which can be found in the literature. We include the proofs for completeness and as means for giving examples of the functorial calculus.
+\TODO{Define $\SKS$ in a convenient way.}
 
 \newcommand{\ai   }{{\mathsf{ai}}}
 \newcommand{\aw   }{{\mathsf{aw}}}
@@ -30,362 +28,13 @@ The results presented in this section, with the exception of Theorem~\vref{theor
 \newcommand{\tttoru }{{{=_{\ttt\vee}}{\uparrow}}}
 \newcommand{\fffandu }{{{=_{\fff\wedge}}{\uparrow}}}
 
-
-\begin{definition}\label{definition:SKS}
-System $\SKS$ is defined by the following \emph{structural}\index{inference rule!structural} inference rules:
-\[
-\vlinf{\aid}{}{\vls[a.\bar a]}{\ttt}\qquad
-\vlinf{\awd}{}{a}{\fff}\qquad
-\vlinf{\acd}{}{a}{\vls[a.a]}
-\]
-\[
-\vlinf{\aiu}{}{\fff}{\vls(a.\bar a)}\qquad
-\vlinf{\awu}{}{\ttt}{a}\qquad
-\vlinf{\acu}{}{\vls(a.a)}{a}\quad,
-\]
-the \emph{logical}\index{inference rule!logical} inference rules:
-\[
-\vlinf{\swi}{}{\vls[(A.B).C]}{\vls(A.[B.C])}\qquad
-\vlinf{\med}{}{\vls([A.C].[B.D])}{\vls[(A.B).(C.D)]}
-\quad,
-\]
-and the \emph{invertible}\index{inference rule!invertible} (\emph{logical}) rules:
-\[
-\vlinf{\coor}{}{\vls[B.A]}{\vls[A.B]}\qquad
-\vlinf{\coand}{}{\vls(B.A)}{\vls(A.B)}\qquad
-\vlinf{\asor}{}{\vls[[A.B].C]}{\vls[A.[B.C]]}\qquad
-\vlinf{\asand}{}{\vls(A.(B.C))}{\vls((A.B).C)}
-\]
-\[
-\vlinf{\fffd}{}{\vls[A.\fff]}{A}\qquad
-\vlinf{\tttd}{}{\vls(A.\ttt)}{A}\qquad
-\vlinf{\fffu}{}{A}{\vls(\ttt.A)}\qquad
-\vlinf{\tttu}{}{A}{\vls[\fff.A]}
-\]
-\[
-\vlinf{\fffandd}{}{\vls(\fff.\fff)}{\fff}\qquad
-\vlinf{\tttord}{}{\vls[\ttt.\ttt]}{\ttt}\qquad
-\vlinf{\fffandu}{}{\ttt}{\vls[\ttt.\ttt]}\qquad
-\vlinf{\tttoru}{}{\fff}{\vls(\fff.\fff)}\quad.
-\]
-\end{definition}
-
-The calculus of structures and system $\SKS$ were originally defined in terms of equivalence classes of formulae, called `structures', and without the above invertible logical rules. However, we find it more convenient to use formulae instead, since it makes it simpler to `trace atom occurrences', which we will see in Section~\ref{subsection:ExtractingFlowsFromDerivations}. We now show that the two approaches are morally the same.
-
-%------------------------------------------------------
-\begin{definition}\label{definition:EquivalenceRelation}
-We define the relation $=$ such that, given formulae $\alpha$ and $\beta$, $\alpha=\beta$ if there is a derivation $\vlder{\Phi}{\{\coor,\coand,\asor,\asand,\fffd,\tttd,\fffu,\tttu,\fffandd,\tttord,\fffandu,\tttoru\}}{\beta}{\alpha}$.
-\end{definition}
-%---------------
-
-%----------------------------------------
-\begin{notation}\label{notation:Equation}
-If $\alpha=\beta$, we often write $\vlinf{=}{}{\beta}{\alpha}$.
-\end{notation}
-%-------------
-
-%------------------------------------------
-\begin{remark}\label{remark:ContextClosure}
-By Notation~\vref{notation:Equation} and Lemma~\vref{lemma:DerInContext}, for any formulae $\alpha$ and $\beta$ and context $\xi\vlhole$ we have that $\alpha=\beta$ implies $\xi\{\alpha\}=\xi\{\beta\}$.
-\end{remark}
-%-----------
-
-%---------------------------------------------------------
-\begin{proposition}\label{proposition:EquivalenceRelation}
-The relation $=$ defined in Definition~\ref{definition:EquivalenceRelation} is an equivalence relation.
-\end{proposition}
-%----------------
-
-It turns out that the equivalence class induced by $=$ is the same as the structures defined in \cite{}.
-
-%----------------------------------------
-\begin{remark}\label{remark:EquationSize}
-If $\alpha=\beta$, then (as remarked in \cite{BrusGugl:07:On-the-P:fk}) there exists a derivation
-\[
-\vlder{\Phi}{\{\coor,\coand,\asor,\asand,\fffd,\tttd,\fffu,\tttu,\fffandd,\tttord,\fffandu,\tttoru\}}{\beta}{\alpha}
-\]
-whose size depends at most quadratically on the sum of the sizes of $\alpha$ and $\beta$.
-\end{remark}
-%-----------
-
-\begin{notation}\label{notation:ImplicitEquations}
-When we work in (subsystems of) $\SKS$, we often omit mentioning the invertible rules. Let $\mathcal{S}$ be a subsystem of $\SKS$, then, unless specified otherwise, when we write $\mathcal{S}$ we mean $\mathcal{S}\cup\{\coor,\coand,\asor,\asand,\fffd,\tttd,\fffu,\tttu,\fffandd,\tttord,\fffandu,\tttoru\}$. Furthermore, if $\rho\in\SKS$, and there is a derivation
-\[
-\vlderivation
-{
- \vlin{=}{}
- {
-  \beta
- }
- {
-  \vlin{\rho}{}
-  {
-   \beta'
-  }
-  {
-   \vlin{=}{}
-   {
-    \alpha'
-   }
-   {
-    \vlhy
-    {
-     \alpha
-    }
-   }
-  }
- }
-}
-\]
-we sometimes write
-\[
-\vlinf{\rho}{}
-{
- \beta
-}
-{
- \alpha
-}\quad.
-\]
-\emph{E.g.}, instead of the derivation
-\[
-\vlderivation
-{
- \vlin{\coor}{}
- {
-  \vls
-  [
-   \alpha
-  \;.\;
-   \vlinf{\coand}{}
-   {
-    \vls(\beta.\gamma)
-   }
-   {
-    \vls(\gamma.\beta)
-   }
-  ]
- }
- {
-  \vlin{\swi}{}
-  {
-   \vls[(\gamma.\beta).\alpha]
-  }
-  {
-   \vlin{\coand}{}
-   {
-    \vls(\gamma.[\beta.\alpha])
-   }
-   {
-    \vlhy
-    {
-     \vls
-     (
-      \vlinf{\coor}{}
-      {
-       \vls[\beta.\alpha]
-      }
-      {
-       \vls[\alpha.\beta]
-      }
-     \;.\;
-      \gamma
-     )
-    }
-   }
-  }
- }
-}\quad,
-\]
-we write
-\[
-\vlinf{\swi}{}{\vls[\alpha.(\beta.\gamma)]}{\vls([\alpha.\beta].\gamma)}\quad.
-\]
-See the proofs of Theorems~\vrefrange{theorem:SoundPathBreaker}{theorem:SoundMultipleIsolatedSubflowsRemoval} for more examples of implicit equations.
-\end{notation}
-
-We now give some standard results which will also serve as examples of system $\SKS$ and the functorial calculus.
-
-\begin{lemma}\label{lemma:SuperSwitch}
-Given a context $\xi\vlhole$ and a formula $\alpha$ there exist derivations $\vlder{}{\{\swi\}}{\xi\{\alpha\}}{\vls(\alpha.\xi\{\ttt\})}$ and $\vlder{}{\{\swi\}}{\vls[\xi\{\fff\}.\alpha]}{\xi\{\alpha\}}$; both of whose size depend at most quadratically on the size of $\xi\{\alpha\}$.
-\end{lemma}
-
-\begin{proof}
-We show how to construct the first derivation, the second one can be done symmetrically. We argue by induction on the number of atoms in $\xi\vlhole$. The base case, $\xi\vlhole=\vlhole$, is trivial and the inductive cases are:
-\[
-\vlderivation
-{
- \vlin{=}{}
- {
-  \xi\{\alpha\}
- }
- {
-  \vlin{\swi}{}
-  {
-   \vlsbr[\vlder{\Psi}{\{\swi\}}{\xi'\{\alpha\}}{\vls(\alpha.\xi'\{\ttt\})}\;\;.\;\;\beta]
-  }
-  {
-   \vlhy
-   {
-    \vls
-    (
-     \alpha
-    \;.\;
-     \vlinf{=}{}
-     {
-      \vls[\xi'\{\ttt\}.\beta]
-     }
-     {
-      \xi\{\ttt\}
-     }
-    )
-   }
-  }
- }
-}\qquad\mbox{and}\qquad
-\vlderivation
-{
- \vlin{=}{}{\xi\{\alpha\}}
- {
-  \vlin{=}{}{\vlsbr(\vlder{\Psi'}{\{\swi\}}{\xi'\{\alpha\}}{\vls(\alpha.\xi'\{\ttt\})}\;\;.\;\;\beta)}
-  {
-   \vlhy{\vls(\alpha.\xi\{\ttt\})}
-  }
- }
-}\quad,
-\]
-for some $\xi'\vlhole$ and $\beta$ where $\beta$ is not a unit and $\Psi$ and $\Psi'$ exist by the inductive hypothesis.
-\end{proof}
+\TODO{Define superswitches.}
 
 \newcommand{\supers}{\mathsf{ss}}
 \newcommand{\ssu}{\supers\uparrow}
 \newcommand{\ssd}{\supers\downarrow}
 
-\begin{notation}\label{notation:SuperSwitch}
-We often write $\vlinf{\ssu}{}{\xi\{\alpha\}}{\vls(\alpha.\xi\{\ttt\})}$ and $\vlinf{\ssd}{}{\vls[\xi\{\fff\}.\alpha]}{\xi\{\alpha\}}$, instead of, respectively, the derivations $\vlder{}{\{\swi\}}{\xi\{\alpha\}}{\vls(\alpha.\xi\{\ttt\})}$ and $\vlder{}{\{\swi\}}{\vls[\xi\{\fff\}.\alpha]}{\xi\{\alpha\}}$, as defined in the proof of Lemma~\vref{lemma:SuperSwitch}. Instead of the derivation
-\[
-\vlinf{\swi}{}
-{
- \vls[\zeta\{\fff\}\;.\;\vlinf{\ssu}{}{\xi\{\alpha\}}{\vls(\alpha.\xi\{\ttt\})}]
-}
-{
- \vls(\vlinf{\ssd}{}{\vls[\zeta\{\fff\}.\alpha]}{\zeta\{\alpha\}}\;.\;\xi\{\ttt\})
-}
-\]
-we write $\vlinf{\supers}{}{\vls[\zeta\{\fff\}.\xi\{\alpha\}]}{\vls(\zeta\{\alpha\}.\xi\{\ttt\})}$.
-\end{notation}
-
-\begin{lemma}\label{lemma:GenericWeakening}
-Given a formula $\alpha$, there exist derivations $\vlupsmash{\vlder{}{\{\awd,\swi\}}{\alpha}{\fff}}$ and $\vlupsmash{\vlder{}{\{\awu,\swi\}}{\ttt}{\alpha}}$; both of whose size depend at most quadratically on the size of $\alpha$.
-\end{lemma}
-
-\begin{proof}
-We show how to construct the first derivation, the second one can be done symmetrically.
-Let $a_1$, $\dots$, $a_n$ be the atoms appearing in $\alpha$, then there exists a derivation
-\[
-\vlder{}{\{\awd\}}{\alpha}{\alpha\{a_1/\fff,\dots,a_n/\fff\}}
-\quad.
-\]
-Since $\alpha\{a_1/\fff,\dots,a_n/\fff\}$ contains no atoms, there exists a derivation
-\[
-\vlder{}{\{\fffd,\tttd,\fffandd,\tttord\}}{\alpha\{a_1/\fff,\dots,a_n/\fff\}}{\fff}
-\qquad\mbox{or}\qquad
-\vlderivation
-{
- \vlde{}{\{\fffd,\tttd,\fffandd,\tttord\}}
- {
-  \alpha\{a_1/\fff,\dots,a_n/\fff\}
- }
- {
-  \vlin{=}{}
-  {
-   \ttt
-  }
-  {
-   \vlin{\swi}{}
-   {
-    \vls[(\fff.\ttt).\ttt]
-   }
-   {
-    \vlin{=}{}
-    {
-     \vls(\fff.[\ttt.\fff])
-    }
-    {
-     \vlhy
-     {
-      \fff
-     }
-    }
-   }
-  }
- }
-}
-\quad.
-\]
-\end{proof}
-
-\begin{lemma}\label{lemma:GenericContraction}
-Given a formula $\alpha$, there exist derivations $\vlupsmash{\vlder{}{\{\acd,\med\}}{\alpha}{\vls[\alpha.\alpha]}}$ and $\vlupsmash{\vlder{}{\{\acu,\med\}}{\vls(\alpha.\alpha)}{\alpha}}$; both of whose size depend at most quadratically on the size of $\alpha$.
-\end{lemma}
-
-\begin{proof}
-We show how to construct the first derivation, the second one can be done symmetrically. We argue by induction on the number of atoms appearing in $\alpha$. We have to consider the following base case and two inductive cases:
-\[
-\vlinf{}{}{a}{\vls[a.a]}
-\qquad\hbox{,}\qquad
-\vlinf{\med}{}
-{
- \vls
- (
-  \vlder{}{\{\acd,\med\}}
-  {
-   \alpha
-  }
-  {
-   \vls[\alpha.\alpha]
-  }
- \;\;.\;\;
-  \vlder{}{\{\acd,\med\}}
-  {
-   \beta
-  }
-  {
-   \vls[\beta.\beta]
-  }
- )
-}
-{
- \vls[(\alpha.\beta).(\alpha.\beta)]
-}
-\qquad\hbox{and}\qquad
-\vlinf{=}{}
-{
- \vls
- [
-  \vlder{}{\{\acd,\med\}}
-  {
-   \alpha
-  }
-  {
-   \vls[\alpha.\alpha]
-  }
- \;\;.\;\;
-  \vlder{}{\{\acd,\med\}}
-  {
-   \beta
-  }
-  {
-   \vls[\beta.\beta]
-  }
- ]
-}
-{
- \vls[[\alpha.\beta].[\alpha.\beta]]
-}
-\quad.
-\]
-\end{proof}
+\TODO{Define generic contraction and weakening.}
 
 \newcommand{\contr}{\mathsf{c}}
 \newcommand{\cod}{{\contr{\downarrow}}}
@@ -393,212 +42,3 @@ We show how to construct the first derivation, the second one can be done symmet
 \newcommand{\weakn}{\mathsf{w}}
 \newcommand{\wed}{{\weakn{\downarrow}}}
 \newcommand{\weu}{{\weakn{\uparrow}}}
-
-\begin{notation}\label{notation:GenericWeakeningContraction}
-In the non-atomic version of system $\SKS$ the derivations shown in the proofs of Lemma~\ref{lemma:GenericWeakening} and Lemma~\vref{lemma:GenericContraction} correspond to (co)weakening and (co)contractions, respectively. For this reason we sometimes write the inference rules $\vlinf{\wed}{}{\alpha}{\fff}$, $\vlinf{\weu}{}{\ttt}{\alpha}$, $\vlinf{\cod}{}{\alpha}{\vls[\alpha.\alpha]}$ and $\vlinf{\cou}{}{\vls(\alpha.\alpha)}{\alpha}$ instead of the derivations $\vlder{}{\{\awd,\swi\}}{\alpha}{\fff}$, $\vlder{}{\{\awu,\swi\}}{\ttt}{\alpha}$, $\vlder{}{\{\acd,\med\}}{\alpha}{\vls[\alpha.\alpha]}$ and $\vlder{}{\{\acu,\med\}}{\vls(\alpha.\alpha)}{\alpha}$, respectively.
-\end{notation}
-
-To give an example of the notions defined so far, we now show a completeness proof of system $\SKS$.
-
-\begin{theorem}\label{theorem:SKSComplete}
-System $\SKS$ is complete for propositional classical logic.
-\end{theorem}
-
-\begin{proof}
-Consider a tautology $\alpha$. We show by induction on the number of atoms in $\alpha$ that there exists a proof of $\alpha$ in $\SKS$. For the base case, let $\alpha$ consist only of units. Then, since $\alpha$ is a tautology, we can build
-\[
-\vlder{}{\{\fffd,\tttd,\fffandd,\tttord\}}{\alpha}{\ttt}\quad.
-\]
-
-For the inductive case, let $\alpha$ be a tautology containing instances of the atom $a$. We consider two cases:
-\begin{itemize}
-\item if $\alpha$ does not contain an instance of $\bar a$, then $\alpha\{a/\fff\}$ is a tautology, so by the inductive hypothesis we can build
-\[
-\vlderivation
-{
- \vlde{}{\{\awd\}}
- {
-  \alpha
- }
- {
-  \vlde{}{}
-  {
-   \alpha\{a/\fff\}
-  }
-  {
-   \vlhy{\ttt}
-  }
- }
-}\quad;
-\]
-\item otherwise, both $\alpha\{a/\ttt,\bar a/\fff\}$ and $\alpha\{a/\fff,\bar a/\ttt\}$ are tautologies, so by the inductive hypothesis we can build
-\[
-\Phi\;=\;
-\vlderivation
-{
- \vlde{}{\{\ssd\}}
- {
-  \vlsbr[\alpha\;\;.\;\;\vlder{}{\{\acd\}}{\bar a}{\vls[\bar a.\cdots.\bar a]}]
- }
- {
-  \vlde{}{\{\aid,\awd\}}
-  {
-   \alpha\{a/\vlsbr[a.\bar a]\}
-  }
-  {
-   \vlde{}{}
-   {
-    \alpha\{a/\ttt,\bar a/\fff\}
-   }
-   {
-    \vlhy{\ttt}
-   }
-  }
- }
-}\quad.
-\]
-Using $\Phi$ and the inductive hypothesis we can build the desired derivation:
-\[
-\vlderivation
-{
- \vlde{}{\cod}
- {
-  \alpha
- }
- {
-  \vlde{}{\{\ssd\}}
-  {
-   \vls[\alpha.\cdots.\alpha]
-  }
-  {
-   \vlde{}{}
-   {
-    \alpha\{\bar a/\vlsbr[\alpha.\bar a]\}
-   }
-   {
-    \vlde{}{\{\awd\}}
-    {
-     \alpha\{\bar a/\ttt\}
-    }
-    {
-     \vlde{}{}
-     {
-      \alpha\{a/\fff,\bar a/\ttt\}
-     }
-     {
-      \vlhy{\ttt}
-     }
-    }
-   }
-  }
- }
-}\quad.
-\]
-\end{itemize}
-\end{proof}
-
-\begin{remark}
-Given any formulae $\alpha$ and $\beta$ and any context $\xi\vlhole$, then, by a construction similar to the one in the proof of Lemma~\vref{lemma:SuperSwitch}, we can build a derivation $\vlder{}{\{\swi,\coor,\coand,\asor\}}{\vls[\xi\{\alpha\}.\beta]}{\xi\{\vls[\alpha.\beta]\}}$. If we use this derivation instead of the rule $\ssd$ in the proof of Theorem~\ref{theorem:SKSComplete}, it follows that the system
-\[
-\{\aid,\acd,\awd,\swi,\med,\coor,\coand,\asor,\fffd,\tttd,\fffandd,\tttord\}
-\]
-is complete for classical logic. This justifies the naming of the invertible rules, as the tradition is in deep inference to label admissible rules with an $\uparrow$.
-\end{remark}
-
-\begin{remark}
-If we allow the use of all the rules of $\SKS$, as opposed to only the down fragment, we can build a more compact proof than what we do in Theorem~\ref{theorem:SKSComplete}, by using the following as the inductive case:
-\[
-\vlderivation
-{
- \vlin{\cod}{}
- {
-  \alpha
- }
- {
-  \vlin{\swi}{}
-  {
-   \vls
-   [
-    \vlder{}{\{\ssu\}}
-    {
-     \alpha
-    }
-    {
-     \vlsbr
-     (
-      \vlder{}{\{\acu\}}
-      {
-       \vls(a.\cdots.a)
-      }
-      {
-       a
-      }
-     \;\;.\;\;
-      \vlder{}{\{\awd\}}
-      {
-       \alpha\{a/\ttt\}
-      }
-      {
-       \alpha\{a/\ttt,\bar a/\fff\}
-      }
-     )
-    }
-   \;\;\;\;.\;\;\;\;
-    \vlder{}{\{\ssu\}}
-    {
-     \alpha
-    }
-    {
-     \vlsbr
-     (
-      \vlder{}{\{\acu\}}
-      {
-       \vls(\bar a.\cdots.\bar a)
-      }
-      {
-       \bar a
-      }
-     \;\;.\;\;
-      \vlder{}{\{\awd\}}
-      {
-       \alpha\{\bar a/\ttt\}
-      }
-      {
-       \alpha\{a/\fff,\bar a/\ttt\}
-      }
-     )
-    }
-   ]
-  }
-  {
-   \vlde{}{}
-   {
-    \vlsbr
-    (
-     \vlinf{\swi}{}
-     {
-      \vls[(a.\alpha\{a/\ttt,\bar a/\fff\}).\bar a]
-     }
-     {
-      \vls
-      (
-       \vlinf{}{}{\vls[a.\bar a]}{\ttt}
-      \;.\;
-       \alpha\{a/\ttt,\bar a/\fff\}
-      )
-     }
-    \;\;.\;\;
-     \alpha\{a/\fff,\bar a/\ttt\}
-    )
-   }
-   {
-    \vlhy
-    {
-     \ttt
-    }
-   }
-  }
- }
-}\quad.
-\]
-\end{remark}
