Removed content which belongs in AFII

--- a/global_reductions/multiple_isolated_subflow.tex
+++ b/global_reductions/multiple_isolated_subflow.tex
@@ -1,6 +1,6 @@
 \newcommand{\MISR}{\mathsf{MISR}}
 
-With the operator $\ISR$ we can produce weakly streamilend derivations with respect to one atom at a time, with the operator $\PB$ we can produce weakly streamlined derivations with respect to two dual atoms in parallell. In this section we see an operator, $\MISR_n$, for every $n>0$, which is a generalisation of $\ISR$, that can produce a weakly streamlined derivation with respect to $n$ number of atoms in parallell, as long as they are pairwise non-dual.
+\TODO{Redo intro.}
 
 We will see later how a derivation containing $2n$ atoms can be weakly streamlined by two applications of $\Simpl$ and two applications of $\MISR_n$.
 
@@ -160,23 +160,6 @@ where, for $1\le i\le n$, $l_i$ is the number of atom occurrences in $\gamma_{k,
 \begin{remark}
 The reduction ${\to_{\frmis_n}}$ denoted as if it only depends on $n$, this is a misuse of notation, and we will take it for granted that we also have the other parameters whenever we use ${\to_{\frmis_n}}$.
 \end{remark}
-
-%--------------------------------------------------------------
-\begin{remark}\label{remark:BaseMultipleIsolatedSubflowRemoval}
-If $N=1$ and
-$
-\Gammasf_1=\;
-\vlinf{=}{}
-{
- \vls[a_1.\fff]
-}
-{
- \vls(a_1.\ttt)
-}\;,
-$
-then ${\to_{\frmis_1}}={\to_\fris}$.
-\end{remark}
-%-----------
 
 %------------------------------------------------------------------
 \begin{theorem}\label{theorem:SoundMultipleIsolatedSubflowsRemoval}
@@ -648,7 +631,7 @@ with atomic flow
 (30, 13)*{\aflabelleft{\psi_n}};
 }\quad.
 \]
-We then define $\MISR_n(\Phi,a_1,\dots,a_n)$ to be such that $\Psi\to_\fris\MISR(\Phi,a_1,\dots,a_n)$, where $\phi$, $\psi_1$, $\dots$, $\psi_n$ are the flows, by the same names, shown in Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}.
+We then define $\MISR_n(\Phi,a_1,\dots,a_n)$ to be such that $\Psi\to_\frmis\MISR(\Phi,a_1,\dots,a_n)$, where $\phi$, $\psi_1$, $\dots$, $\psi_n$ are the flows, by the same names, shown in Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}.
 \end{definition}
 %---------------
 
