--- a/main_result.tex
+++ b/main_result.tex
@@ -1,27 +1,12 @@
 \section{Main Result}\label{section:MainResult}
 
+\TODO{Redo the introduction to this section:}
+
 We now present the main result of this thesis: Three procedures for obtaining weakly streamlined derivations. Corollaries of the main results are: cut elimination, super-streamlining and hyper-streamlining.
 
 %----------------------------------------------
 \begin{theorem}\label{theorem:WeakStreamlining}
-Given a derivation $\Phi$ and unique and pairwise non-dual atoms $a_1$, $\dots$, $a_n$, such that $a_1$, $\dots$, $a_n$ and their duals are all the atoms appearing in $\Phi$,
-\begin{itemize}
-\item let
-\begin{itemize}
-\item $\Phi'=\ISR(\dots\ISR(\Simpl(\Phi,a_1,\dots,a_n),a_1),\dots,a_n)$, and
-\item $\Phi''=\ISR(\dots\ISR(\Simpl(\Phi',\bar a_1,\dots,\bar a_n),\bar a_1),\dots,\bar a_n)$,
-\end{itemize}
-then
-\begin{itemize}
-\item $\Phi''$ is weakly streamlined, and
-\item the size of $\Phi''$ depends at most exponentially on the size of\/ $\Phi$;
-\end{itemize}
-\item let\/ $\Phi'=\PB(\dots\PB(\Phi,a_1),\dots,a_n)$, then
-\begin{itemize}
-\item $\Phi'$ is weakly streamlined, and
-\item the size of\/ $\Phi'$ depends at most exponentially on the size of\/ $\Phi$; and
-\end{itemize}
-\item let
+Given a derivation $\Phi$ and unique and pairwise non-dual atoms $a_1$, $\dots$, $a_n$, such that $a_1$, $\dots$, $a_n$ and their duals are all the atoms appearing in $\Phi$, let
 \begin{itemize}
 \item $\Phi'=\QMISR(\Simpl(\Phi,a_1,\dots,a_n),a_1,\dots,a_n)$, and
 \item $\Phi''=\QMISR(\Simpl(\Phi',\bar a_1,\dots,\bar a_n),\bar a_1,\dots,\bar a_n)$,
@@ -31,10 +16,9 @@ then
 \item $\Phi''$ is weakly streamlined, and
 \item the size of\/ $\Phi''$ depends at most quasipolynomially on the size of\/ $\Phi$.
 \end{itemize}
-\end{itemize}
 \end{theorem}
 
 \begin{proof}
-The statements follow by Proposition~\vref{proposition:Simplifier}, Proposition~\vref{proposition:IsolatedSubflowRemover}, Proposition~\vref{proposition:PathBreaker} and Proposition~\vref{proposition:QuasipolynomialMultipleIsolatedSubflowRemover}.
+The statements follow by Proposition~\vref{proposition:Simplifier} and Proposition~\vref{proposition:QuasipolynomialMultipleIsolatedSubflowRemover}.
 \end{proof}
 %----------
