--- a/thesis.tex
+++ b/thesis.tex
@@ -15,8 +15,8 @@
 
 \input{defs}
 
-\author{Tom Erik Gundersen}
-\title{A General View of Normalisation through Atomic Flows}
+\author{Alessio Guglielmi and Tom Gundersen}
+\title{Quasipolynomial Streamlining via Atomic Flows}
 
 \begin{document}
 \bibliographystyle{alpha}
