--- a/main_result.tex
+++ b/main_result.tex
@@ -1,5 +1,7 @@
 \section{Main Result}\label{section:MainResult}
 
+\TODO{Redo the introduction to this section:}
+
 We now present the main result of this thesis: Three procedures for obtaining weakly streamlined derivations. Corollaries of the main results are: cut elimination, super-streamlining and hyper-streamlining.
 
 %----------------------------------------------
@@ -20,16 +22,6 @@ then
 \begin{itemize}
 \item $\Phi'$ is weakly streamlined, and
 \item the size of\/ $\Phi'$ depends at most exponentially on the size of\/ $\Phi$; and
-\end{itemize}
-\item let
-\begin{itemize}
-\item $\Phi'=\QMISR(\Simpl(\Phi,a_1,\dots,a_n),a_1,\dots,a_n)$, and
-\item $\Phi''=\QMISR(\Simpl(\Phi',\bar a_1,\dots,\bar a_n),\bar a_1,\dots,\bar a_n)$,
-\end{itemize}
-then
-\begin{itemize}
-\item $\Phi''$ is weakly streamlined, and
-\item the size of\/ $\Phi''$ depends at most quasipolynomially on the size of\/ $\Phi$.
 \end{itemize}
 \end{itemize}
 \end{theorem}
